--- a/YetAnotherFTL.Console/YetAnotherFTL.Console.csproj
+++ b/YetAnotherFTL.Console/YetAnotherFTL.Console.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="Nakov.IO.Cin" Version="2.0.2.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\YetAnotherFTL\YetAnotherFTL.csproj" />
+    </ItemGroup>
+
 </Project>
